신규 기능 추가, 추가코드샘플 테스트, README.md 참조

--- a/run_development_server.ini
+++ b/run_development_server.ini
@@ -1,6 +1,6 @@
-    set FLASK_APP=web_service_with_flask
-    set FLASK_DEBUG=true
-    set APP_CONFIG_FILE="%USERPROFILE%\Desktop\services\web_service_with_flask\config\development.py"
-    cd "%USERPROFILE%\Desktop\services\web_service_with_flask"
-    call "%USERPROFILE%\Desktop\services\web_service_with_flask\.venv\Scripts\activate.bat"
-    py "%USERPROFILE%\Desktop\services\web_service_with_flask\web_flask.py"
+set FLASK_APP=web_service_with_flask
+set FLASK_DEBUG=true
+set APP_CONFIG_FILE=".\config\development.py"
+cd "."
+call ".\.venv\Scripts\activate.bat"
+py ".\web_flask.py"
